--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "quill-image-extend-module",
-  "version": "1.1.2",
+  "name": "quill-image.asyn-extend-module",
+  "version": "1.0.1",
   "description": "plugin for vue-quill-editor to upload image",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NextBoy/quill-image-extend-module.git"
+    "url": "git+https://github.com/phpmicroservice/quill-image.asyn-extend-module.git"
   },
   "keywords": [
     "quill",
@@ -19,7 +19,7 @@
   "author": "nextboy",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NextBoy/quill-image-extend-module/issues"
+    "url": "https://github.com/phpmicroservice/quill-image.asyn-extend-module/issues"
   },
-  "homepage": "https://github.com/NextBoy/quill-image-extend-module#readme"
+  "homepage": "https://github.com/phpmicroservice/quill-image.asyn-extend-module#readme"
 }
